# python-tedge-agent

./: .gitignore  .pylintrc  README.md  docker-compose.yaml  justfile  pyproject.toml
.github/workflows/: pr.yaml  publish.yaml  test.yaml
ci/: demo.sh
config/: tedge-configuration-plugin.json
containers/: agent.dockerfile  demo.dockerfile
images/: child.dockerfile
src/tedge/agent/: app.py  client.py  topics.py
src/tedge/agent/management/: configuration.py  firmware.py  metrics.py
tests/children/: operations.robot
tests/resources/: common.robot
